Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/glory/index.html
+++ b/source/widget/glory/index.html
@@ -12,6 +12,22 @@
     <!-- 这是当前模块样式文件 -->
     <link href="glory.css" rel="stylesheet"></head>
     <body>
+        <ul class="screen-rank">
+            <li class="popular-rank">人气</li>
+            <li >幼升小</li>
+            <li >一年级</li>
+            <li >二年级</li>
+            <li >三年级</li>
+            <li >四年级</li>
+            <li >五年级</li>
+            <li >六年级</li>
+            <li >初一</li>
+            <li >初二</li>
+            <li >初三</li>
+            <li >高一</li>
+            <li >高二</li>
+            <li >高三</li>
+        </ul>
         <ul class="glory-content">
             <li>
                 <div class="water-pic glory-water">
@@ -29,7 +45,8 @@
                         <span class="times">很久以前</span>
                     </div>
                 </div>
-                <a href="###" class="show-course glory-water">查看她在学的课程</a>
+                <a href="###" class="show-course glory-water" onclick="showCourse(this)">查看她在学的课程</a>
+                <div class="glory-window"></div>
             </li>
             <li>
                 <div class="water-pic glory-water">
@@ -86,6 +103,7 @@
                     </div>
                 </div>
                 <a href="###" class="show-course glory-water">查看她在学的课程</a>
+                <div class="glory-window"></div>
             </li>
         </ul>
 
@@ -93,5 +111,8 @@
         <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
         <!-- 这是当前模块js文件 -->
         <script type="text/javascript" src="glory.js"></script>
+        <script type="text/javascript">
+        
+        </script>
     </body>
     </html>
