--- a/source/widget/live/live.html
+++ b/source/widget/live/live.html
@@ -31,11 +31,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">韬哥认为你一定 会的小学知识点</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -51,11 +48,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">攻克电磁学 章鱼军团逆袭计划之路</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -71,11 +65,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［轻松写作］初中必考亲情作文</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -91,11 +82,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -113,11 +101,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">韬哥认为你一定 会的小学知识点</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -133,11 +118,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">攻克电磁学 章鱼军团逆袭计划之路</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -153,11 +135,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［轻松写作］初中必考亲情作文</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -173,11 +152,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -195,11 +171,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">韬哥认为你一定 会的小学知识点</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -215,11 +188,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">攻克电磁学 章鱼军团逆袭计划之路</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -235,11 +205,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［轻松写作］初中必考亲情作文</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -255,11 +222,8 @@
                 <div class="live-card">
                     <div class="live-course-box">
                         <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
-                        <div class="live-course-hover">
-                            <div class="live-course-title"></div>
-                            <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                            <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                        </div>
+                        <div class="live-course-title"></div>
+                        <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
@@ -285,11 +249,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">韬哥认为你一定 会的小学知识点</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>韬哥认为你一定 会的小学知识点</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -305,11 +266,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">攻克电磁学 章鱼军团逆袭计划之路</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>攻克电磁学 章鱼军团逆袭计划之路</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -325,11 +283,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">［轻松写作］初中必考亲情作文</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>［轻松写作］初中必考亲情作文</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -345,11 +300,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>［老杜物理］理科学霸征集令第一讲</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -365,11 +317,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">韬哥认为你一定 会的小学知识点</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>韬哥认为你一定 会的小学知识点</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -385,11 +334,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">攻克电磁学 章鱼军团逆袭计划之路</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>攻克电磁学 章鱼军团逆袭计划之路</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -405,11 +351,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">［轻松写作］初中必考亲情作文</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>［轻松写作］初中必考亲情作文</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
@@ -425,11 +368,8 @@
         <div class="live-card">
             <div class="live-course-box">
                 <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
-                <div class="live-course-hover">
-                    <div class="live-course-title"></div>
-                    <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
-                </div>
+                <div class="live-course-title"></div>
+                <span>［老杜物理］理科学霸征集令第一讲</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
