--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -11,13 +11,14 @@
     <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="css/error_question.css" type="text/css" rel="stylesheet"/>
     <script type="text/javascript" src="error_question.js"></script>
+    <script src="http://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
     <!--[if lt IE 9]>
         <link href="css/ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
 </head>
 <body>
     <div class="errorQuestion-head">
-        <div class="small-1 large-2 columns">1231456</div>
+        <div class="small-1 large-2 columns left-fade">l</div>
         <div class="small-10 large-8 columns">
             <!--用户信息展示区-->
             <div class="small-4 large-3 columns erq-head-min">
@@ -50,7 +51,7 @@
                 <img src="img/prize4.png" alt="user-praize" class="erq-prize right"/>
             </div>
         </div>
-        <div class="small-1 large-2 columns">78977987</div>
+        <div class="small-1 large-2 columns left-fade">lr</div>
     </div>
 
     <div class="small-1 large-2 columns">left</div>
