--- a/source/widget/personalCenter/center-broadcast.html
+++ b/source/widget/personalCenter/center-broadcast.html
@@ -10,6 +10,7 @@
     <link href="css/normalize.css" type="text/css" rel="stylesheet" />
     <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="css/personalCenter.css" type="text/css" rel="stylesheet"/>
+    <script src="http://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
     <div class="center-rank-flower clearfix">老师最近30天在直播辅导中已收到献花：
