--- a/source/widget/gold/Modal-present.html
+++ b/source/widget/gold/Modal-present.html
@@ -21,7 +21,7 @@
         <div class="present-intro">
             <span class="present-name">清华大学扑克牌</span>
             <div class="present-intro-name">
-                <span class="present-intro-title">描<span>述 ：</span></span><span>清华园，孺子牛.......想要更深入了解清华大学么，那就一起玩会扑克牌吧。让玩耍与认知达到统一，美观而便捷</span>
+                <span class="present-intro-title">描<span>述 ：</span></span><span class="present-intro-content">清华园，孺子牛.......想要更深入了解清华大学么，那就一起玩会扑克牌吧。让玩耍与认知达到统一，美观而便捷</span>
             </div>
             <div class="present-intro-name">
                 <span class="present-intro-title">数<span>量 ：</span></span><div class="present-dec"><p class="p1"></p></div>
