--- a/source/widget/courseInfor/live_coures.html
+++ b/source/widget/courseInfor/live_coures.html
@@ -10,8 +10,215 @@
     <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
+     <link href="../header/ui-header.css" rel="stylesheet"></head>
+      <link href="../footer/ui-footer.css" rel="stylesheet"></head>
     <link href="ui-course-infor.css" rel="stylesheet"></head>
 <body>
+ <!-- 登录前 -->
+    <div id="ui-header-menu-wrap">
+        <div class="ui-header-menu">
+            <div class="login-bar">
+                <div class="s-bar">
+                    <span class="xes">学而思网校欢迎你</span>
+                    <a href="#"  class="login">请登录</a>
+
+                </div>
+                <ul class="s-mobile header-hover">
+                    <li>
+                        <a href="#" class="register">免费注册</a>
+                    </li>
+                    <li class="m-xes set-show">
+                        <span>移动网校<i class="nav-r"><s class="nav-s">◇</s></i></span>
+                         <div class="menu-layer">
+                            <ul>
+                                <li>
+                                    <a href="#">手机版</a>
+                                </li>
+                                <li>
+                                    <a href="#">IPAD版</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-list">
+                <ul>
+                    <li>
+                        <a href="#">网校首页</a>
+                    </li>
+                    <li>
+                        <a href="#">个人中心</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            购物车
+                            <em>2</em>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            订单
+                            <em>2</em>
+                        </a>
+
+                    </li>
+                    <li class="set-show">
+                        <span>卡激活<i class="nav-r"><s class="nav-s">◇</s></i></span>
+                        <div class="menu-layer">
+                            <ul>
+                                <li>
+                                    <a href="#">代金卡</a>
+                                </li>
+                                <li>
+                                    <a href="#">听课证</a>
+                                </li>
+                                <li>
+                                    <a href="#">课程绑定卡</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="http://www.speiyou.com/" target="_blank">更多课程</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="phone-400">400-800-2211</div>
+        </div>
+    </div>
+    <!-- 顶部菜单***这部分分为未登录和已登录**个人中心会用到 -->
+    <div class="ui-head-logo">
+        <div class="h-logo">
+            <a herf="#">学而思网校</a>
+        </div>
+        <div class="h-search">
+            <input type="text" class="h-text" placeholder="搜索:秋季满分冲刺班" autocomplete="on">
+            <button type="button" class="btn-search">搜索</button>
+        </div>
+        <div class="h-words">
+            <a target="_blank" href="#">免费课</a>
+            <a target="_blank" href="#">9.9抢购</a>
+            <a target="_blank" href="#">11月11天</a>
+            <a target="_blank" href="#">9.9抢购</a>
+            <a target="_blank" href="#">11月11天</a>
+            <a target="_blank" href="#">9.9抢购</a>
+        </div>
+        <!-- 头部购物车ui部分调用 -->
+        <div class="ui-head-shopcart ">
+            <div class="sp-up-wrap"> <i class="sp-icon-left"></i> <i class="sp-icon-right">&gt;</i>
+                <i class="sp-amount">12</i>
+                <a href="#" target="_blank">我的购物车</a>
+            </div>
+            <!-- 上半部分 -->
+            <div class="sp-down-wrap">
+                <div class="spacer"></div>
+                <!-- 购物车没有商品 -->
+                <div class="sp-no-shop-wrap">
+                    <span>购物车空空如也~，快去选择课程吧~</span>
+                </div>
+                <!-- 购物车有商品  -->
+                <h4 class="new-add-cart">最新加入的商品</h4>
+                <div class="sp-scroll-wrap">
+                    <ul>
+                        <li>
+                            <div class="left-infor-course">
+                                <h6 class="course-title">
+                                    <em>数学</em>
+                                    2015学年五升六年级奥数年卡（竞赛班）
+                                </h6>
+                                <span class="course-teacher">授课老师：张新刚</span>
+                            </div>
+                            <div class="right-function">
+                                <span class="money">￥1000</span>
+                                <span class="fav">续报9折</span>
+                                <a  class="delete" href="#">删除</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left-infor-course">
+                                <h6 class="course-title">
+                                    <em>数学</em>
+                                    2015学年五升
+                                </h6>
+                                <span class="course-teacher">授课老师：张新刚</span>
+                            </div>
+                            <div class="right-function">
+                                <span class="money">￥1000</span>
+                                <a  class="delete" href="#">删除</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left-infor-course">
+                                <h6 class="course-title">
+                                    <em>数学</em>
+                                    2015学年五升六年级奥数年卡（竞赛班）
+                                </h6>
+                                <span class="course-teacher">授课老师：张新刚</span>
+                            </div>
+                            <div class="right-function">
+                                <span class="money">￥1000</span>
+                                <span class="fav">续报9折</span>
+                                <a  class="delete" href="#">删除</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left-infor-course">
+                                <h6 class="course-title">
+                                    <em>数学</em>
+                                    2015学年五升六年级奥数年卡（竞赛班）
+                                </h6>
+                                <span class="course-teacher">授课老师：张新刚</span>
+                            </div>
+                            <div class="right-function">
+                                <span class="money">￥1000</span>
+                                <span class="fav">续报9折</span>
+                                <a  class="delete" href="#">删除</a>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="sp-total-content">
+                    <span class="sp-total">
+                        共 <b>2</b>
+                        件商品
+                    </span>
+                    <a id="btn-go-shop-cart" title="去购物车" href="#">去购物车</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 头部logo**and**搜索**购物车 -->
+    <div class="ui-header-nav">
+        <div class="nav-classify hover">
+            <a href="#">
+                全部课程分类 <i class="nav-r"><s class="nav-s">◇</s></i> 
+            </a>
+        </div>
+        <ul class="nav">
+            <li class="current">
+                <a href="">找老师</a>
+            </li>
+            <li>
+                <a href="">免费课</a>
+            </li>
+            <li>
+                <a href="">看学霸</a>
+            </li>
+            <li>
+                <a href="">新鲜事</a>
+            </li>
+            <li>
+                <a href="">逛书城</a>
+            </li>
+            <li>
+                <a href="">泡论坛</a>
+            </li>
+        </ul>
+    </div>
+    <!-- 头部导航 -->
+	<div id="container" class="container">
 	<div class="ui-course-infor-wrap">
 		<div class="course-left-player f-left">
 			<div class="video-images-player">
@@ -179,9 +386,62 @@
 	  <div class="columns-right f-right">9 columns</div>
 	</div>
 	<!-- 课程下半部分 -->
+	</div>
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
+    <script type="text/javascript" src="../header/header.js"></script>
 	<script type="text/javascript" src="ui-course-infor.js"></script>
+	 <!-- 这是页脚部分代码  -->
+    <div id="footer">
+        <div class="foot-service">
+            <a target="_blank" class="service-share" href="http://www.xueersi.com/article/detail/1825">
+                <span>名师</span>
+                <p>38%清华毕业平均教龄5.1年100%面授S级老师</p>
+            </a>
+            <a target="_blank" class="service-system" href="http://www.xueersi.com/article/detail/1824">
+                <span>陪伴</span>
+                <p>直播授课,QQ群,APP随时答疑名师就在你身边</p>
+            </a>
+            <a target="_blank" class="service-live" href="http://www.xueersi.com/article/detail/1814">
+                <span>方便</span>
+                <p>足不出户，免去路途奔波随时随地反复看</p>
+            </a>
+            <a target="_blank" class="service-interaction" href="http://www.xueersi.com/app">
+                <span>有效</span>
+                <p>在线练习及时反馈已累计培养39名中高考状元</p>
+            </a>
+        </div>
+
+        <div class="foot-area">
+            <p>
+                <a href="http://www.xueersi.com">网校首页</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1219">关于我们</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1220">合作专区</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1538">联系我们</a>
+                |
+                <a class="red" href="http://www.xueersi.com/article/detail/1495">版权声明</a>
+                |
+                <a href="http://www.xueersi.com/article/">帮助中心</a>
+            </p>
+            <p>
+                客服电话： <strong>400-800-2211</strong>
+                （免长途话费） Copyright &copy; 2009-2015 www.xueersi.com All Rights Reserved
+            </p>
+            <p>
+                北京学而思教育科技有限公司
+                <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action">京ICP备09032638号</a>
+                京公网安备:1101082103
+            </p>
+            <p class="link">
+                <a target="_blank" href="https://search.szfw.org/cert/l/CX20120925001738002003" id="___szfw_logo___">
+                    <img src="http://x04.xesimg.com/web/201209/13487953879693.png"></a>
+            </p>
+        </div>
+    </div>
+     <!-- 这是页脚结束部分代码  -->
 </body>
 </html>
