--- a/source/widget/courseInfor/live-back-course.html
+++ b/source/widget/courseInfor/live-back-course.html
@@ -79,87 +79,95 @@
 	  	 </ul>
 	  	 <div class="course-info-box">
 	  	 	 <div class="course-detail" style="display:block;">
-	  	 	 	<ul class="nav live_course_nav">
-	  	 	 		<li class="first">讲名称</li>
-	  	 	 		<li>上课日期</li>
-	  	 	 		<li>上课时间</li>
-	  	 	 		<li>学习状态</li>
-	  	 	 	</ul>
-	  	 	 	<div class="live_panel">
-	  	 	 		<ul class="live_course_detail">
-	  	 	 			<li>
-	  	 	 				<div class="live_name">
-	  	 	 					<span class="live_teach">[直播辅导]</span>
-	  	 	 					计算机爱空间上的课教案和时间肯
-	  	 	 				</div>
-	  	 	 				<div class="date">7月1好</div>
-	  	 	 				<div class="time">17:00-19:00</div>
-	  	 	 				<div class="study_status">已结束</div>
-	  	 	 			</li>
-	  	 	 			<li>
-	  	 	 				<div class="live_name">
-	  	 	 					<span class="live_teach">[直播辅导]</span>
-	  	 	 					计算机爱空间上的课教案和时间肯
-	  	 	 				</div>
-	  	 	 				<div class="date">7月1好</div>
-	  	 	 				<div class="time">17:00-19:00</div>
-	  	 	 				<div class="study_status"><a href="#">立即试听</a></div>
-	  	 	 			</li>
-	  	 	 			<li>
-	  	 	 				<div class="live_name">
-	  	 	 					<span class="live_teach">[直播辅导]</span>
-	  	 	 					计算机爱空间上的课教案和时间肯
-	  	 	 				</div>
-	  	 	 				<div class="date">7月1好</div>
-	  	 	 				<div class="time">17:00-19:00</div>
-	  	 	 				<div class="study_status"><a href="#">观看回放</a></div>
-	  	 	 			</li>
-	  	 	 			<li>
-	  	 	 				<div class="live_name">
-	  	 	 					<span class="live_teach">[直播辅导]</span>
-	  	 	 					计算机爱空间上的课教案和时间肯
-	  	 	 				</div>
-	  	 	 				<div class="date">7月1好</div>
-	  	 	 				<div class="time">17:00-19:00</div>
-	  	 	 				<div class="study_status">已结束</div>
-	  	 	 			</li>
-	  	 	 		</ul>
-	  	 	 	</div>
+	  	 	 	<table class="table table_outline">
+							<tbody>
+								<tr>
+									<th class="t-left">讲名称</th>
+									<th>上课日期</th>
+									<th>上课时间</th>
+									<th>学习状态</th>
+								</tr>
+								<tr>
+									<td class="t-left">
+										<span class="live_teach">[直播辅导]</span>
+										计算机爱空间上的课教案和时间肯
+									</td>
+									<td>7月1好</td>
+									<td>17:00-19:00</td>
+									<td>
+										<a href="#">立即试听</a>
+									</td>
+								</tr>
+								<tr>
+									<td class="t-left">
+										<span class="live_teach">[直播辅导]</span>
+										计算机爱空间上的课教案和时间肯
+									</td>
+									<td>7月1好</td>
+									<td>17:00-19:00</td>
+									<td>
+										<a href="#">观看回放</a>
+									</td>
+								</tr>
+								<tr>
+									<td class="t-left">
+										<span class="live_teach">[直播辅导]</span>
+										计算机爱空间上的课教案和时间肯
+									</td>
+									<td>7月1好</td>
+									<td>17:00-19:00</td>
+									<td>
+										<span>未开始</span>
+									</td>
+								</tr>
+								<tr>
+									<td class="t-left">
+										<span class="live_teach">[直播辅导]</span>
+										计算机爱空间上的课教案和时间肯
+									</td>
+									<td>7月1好</td>
+									<td>17:00-19:00</td>
+									<td>
+										<a href="#">立即试听</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
 	  	 	 </div>
 	  	 	 <!-- 直播大纲 -->
 	  	 	 	 <div class="course-detail">
 	  	 	 			<table class="table table_outline">
-	  	 	 				<tbody>
-	  	 	 					<tr style="color:#333;">
-	  	 	 						<td class="text_c get_line">
-	  	 	 							<span class="goline">已上线</span>
-	  	 	 							第一讲：
-	  	 	 						</td>
-	  	 	 						<td>
-	  	 	 							圆初步（一） <strong>&nbsp;&nbsp;</strong>
-	  	 	 						</td>
-	  	 	 					</tr>
-	  	 	 					<tr style="color:#333;">
-	  	 	 						<td class="text_c get_line">
-	  	 	 							<span class="goline">已上线</span>
-	  	 	 							第二讲：
-	  	 	 						</td>
-	  	 	 						<td>
-	  	 	 							圆拓展（一） <strong>&nbsp;&nbsp;</strong>
-	  	 	 						</td>
-	  	 	 					</tr>
-	  	 	 					<tr style="color:#333;">
-	  	 	 						<td class="text_c get_line">
-	  	 	 							<span class="goline">已上线</span>
-	  	 	 							第三讲：
-	  	 	 						</td>
-	  	 	 						<td>
-	  	 	 							圆初步（二）
-	  	 	 							<strong>&nbsp;&nbsp;</strong>
-	  	 	 						</td>
-	  	 	 					</tr>
-	  	 	 				</tbody>
-	  	 	 			</table>
+						<tbody>
+							<tr>
+								<th>状态</th>
+								<th>讲次</th>
+								<th>名称</th>
+							</tr>
+							<tr>
+								<td>
+									<span class="goline">已上线</span>
+								</td>
+								<td>第一讲：</td>
+								<td class="t-left">圆初步（一）</td>
+							</tr>
+							<tr>
+								<td>
+									<span class="goline">已上线</span>
+
+								</td>
+								<td>第二讲：</td>
+								<td class="t-left">圆拓展（一）</td>
+							</tr>
+							<tr>
+								<td>
+									<span class="goline">已上线</span>
+
+								</td>
+								<td>第三讲：</td>
+								<td class="t-left">圆初步（二）</td>
+							</tr>
+						</tbody>
+					</table>
 	  	 	 	 </div>
 	  	 	 <!-- 点播大纲 -->
 	  	 	 <div class="course-detail">
