--- a/source/widget/footer/footer.html
+++ b/source/widget/footer/footer.html
@@ -14,26 +14,26 @@
 <body>
     <!-- 这是页脚部分代码  -->
     <div id="footer">
-        <div class="foot_service">
-            <a target="_blank" class="service_share" href="http://www.xueersi.com/article/detail/1825">
+        <div class="foot-service">
+            <a target="_blank" class="service-share" href="http://www.xueersi.com/article/detail/1825">
                 <span>名师</span>
                 <p>课程中的互动选择题，参与互动的同时，还有奖励哦</p>
             </a>
-            <a target="_blank" class="service_system" href="http://www.xueersi.com/article/detail/1824">
+            <a target="_blank" class="service-system" href="http://www.xueersi.com/article/detail/1824">
                 <span>陪伴</span>
                 <p>课后练习，期中期末考试，与全国学员一争高下</p>
             </a>
-            <a target="_blank" class="service_live" href="http://www.xueersi.com/article/detail/1814">
+            <a target="_blank" class="service-live" href="http://www.xueersi.com/article/detail/1814">
                 <span>方便</span>
                 <p>与录播课程匹配的直播辅导，老师带着你做练习</p>
             </a>
-            <a target="_blank" class="service_interaction" href="http://www.xueersi.com/app">
+            <a target="_blank" class="service-interaction" href="http://www.xueersi.com/app">
                 <span>有效</span>
                 <p>教师答疑，随时向老师提问，聆听老师的声音</p>
             </a>
         </div>
 
-        <div class="foot_area">
+        <div class="foot-area">
             <p>
                 <a href="http://www.xueersi.com">网校首页</a>
                 |
