添加评论样式

--- a/source/widget/courseInfor/live_coures.html
+++ b/source/widget/courseInfor/live_coures.html
@@ -440,7 +440,7 @@
 										<span class="live_teach">[直播辅导]</span>
 										计算机爱空间上的课教案和时间肯
 									</td>
-									
+
 									<td>2015-10-11至2015-11-11</td>
 									<td>
 										<span>未开始</span>
@@ -467,7 +467,23 @@
 						</dl>
 					</div>
 					<!-- 课程介绍 -->
-					<div class="course-detail">课程评价</div>
+					<div class="course-detail">
+					<!-- 评价列表 -->
+						<div class="comment-detail-wrap">
+							<div class="comment-detail-list">
+								<div class="user-pic">
+									<p class="pic">
+										<img width="40" height="40" src="http://file.xueersi.com/award/boy/small_00002.jpg"></p>
+									<p title="小芋头s" class="name">小芋头s</p>
+									<p title="湖南省" class="site">湖南省</p>
+								</div>
+								<div class="user-text-box">
+									<p class="text">中国人所qqqqqqqq</p>
+									<p class="time">2015-11-05 11:07:46</p>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!-- 课程评价 -->
 				</div>
 			</div>
