Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/homework/homework1.html
+++ b/source/widget/homework/homework1.html
@@ -83,7 +83,7 @@
 							<div id="home_ImageTransform1" class="homework-ImageTransform">
 								<ul style="display:none">
 									<li><img src="img/small3.png" /></li>
-									<li><img src="img/small2.png" /></li>
+									<li><img src="http://7sbrvo.com2.z0.glb.qiniucdn.com/homework/img/2015/11/05/14467099031310.png" /></li>
 									<li><img src="img/small3.png" /></li>
 									<li><img src="img/small2.png" /></li>
 									<li><img src="img/small3.png" /></li>
