--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -1,16 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>XUEJS</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>header</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <!-- 这是CSS库文件 -->
+    <link href="../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet" ><!--ignore-->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" ><!--ignore-->
+    <!-- 这是当前模块样式文件 -->
+    <!--STYLE_PLACEHOLDER-->
 </head>
+
 <body>
+    <!-- module.topbar -->
+    <link rel="import" href="../widget/Public.Topbar/topbar.tpl?__inline">
+    <!--  module.header  -->
+    <link rel="import" href="../widget/Public.Header/header.tpl?__inline">
+
     <div class="main">
         <h2>XUEJS自动构建工具</h2>
         <p>
-            
+
         </p>
     </div>
+    <script src="../lib/jQuery/1.11.1/jquery.min.js"></script><!--ignore-->
+
+    <!--SCRIPT_PLACEHOLDER-->
+    <!--RESOURCEMAP_PLACEHOLDER-->
 </body>
+
 </html>
