Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/myCollect/collect.html
+++ b/source/widget/myCollect/collect.html
@@ -62,7 +62,7 @@
             </div>
             <!-- <span class="cancel-collect">取消收藏</span> -->
         </div>
-        <div class="collect-feed icoVoicePlaying">
+        <div class="collect-feed">
             <div class="collect-avatar">
                 <img src="http://img04.xesimg.com/icon/avatar_d.jpg">
                 <span>朱韬</span>
@@ -71,7 +71,7 @@
                 <p class="jzh-name"> 全国三年级群的朱韬老师</p>
                 <div class="icoVoiceCon" style="width: 80px;">
                     <span class="icoVoice"></span>
-                    <span class="voiceTime"><em>50</em>''</span>
+                    <span class="voiceTime"><em>10</em>''</span>
                     <input type="hidden" value="http://pic04.xesimg.com/129.mp3" id="voiceUrl" autocomplete="off">
                 </div>
             </div>
