--- a/source/widget/notice/index.html
+++ b/source/widget/notice/index.html
@@ -16,17 +16,15 @@
         <div id="notice-l">
             <ul class="notice-nav">
                 <li class="notice-hover">网校通知</li>
-                <li>教师留言</li>
-                <li>直播提醒</li>
-                <li>考试提醒</li>
-                <li>资料提醒</li>
+                <li>教师消息<em>10</em></li>
+                <li>系统消息</li>
             </ul>
         </div>
         <div id="notice-r">
             <div class="notice-message">
                 <div class="notice-user">
                     <a><img src="img/notice-user.jpg"></a>
-                    <span>用户名</span>
+                    <span>教师</span>
                 </div>
                 <div class="notice-text">
                     <p>泷泽朗同学： 网校放大招啦！9月21日-10月31日，首届淘书节重磅上线，上百种优质辅导丛书，涵盖小学一年级到高三所有同学的需求，正品保证，值得信赖！天天都有惊喜，优惠形式多种多样，爆款抢购的，秒杀的，特价超体验的，统统都有，力度大到没朋友。只需点击： http://zt.xueersi.com/taoshujie/  妈妈再也不用担心我的学习了。</p>
@@ -37,7 +35,7 @@
             <div class="notice-message">
                 <div class="notice-user">
                     <a><img src="img/notice-user.jpg"/></a>
-                    <span>用户名</span>
+                    <span>教师</span>
                 </div>
                 <div class="notice-text">
                     <p>泷泽朗同学： 网校放大招啦！9月21日-10月31日，首届淘书节重磅上线，上百种优质辅导丛书，涵盖小学一年级到高三所有同学的需求，正品保证，值得信赖！天天都有惊喜，优惠形式多种多样，爆款抢购的，秒杀的，特价超体验的，统统都有，力度大到没朋友。只需点击： http://zt.xueersi.com/taoshujie/  妈妈再也不用担心我的学习了。</p>
@@ -48,11 +46,10 @@
             <div class="notice-message">
                 <div class="notice-user">
                     <a><img src="img/notice-user.jpg"/></a>
-                    <span>用户名</span>
+                    <span>教师</span>
                 </div>
                 <div class="notice-text">
-                    <p>景雪京同学： 直播邀请,2015-09-11 10:45:00至2015-09-11 11:45:00，进行直播答疑,直播主题：这次一定要成功，届时点击
-地址：http://biglive.xueersi.com/Lecturelives/index/3844，进入直播</p>
+                    <p>泷泽朗同学： 网校放大招啦！9月21日-10月31日，首届淘书节重磅上线，上百种优质辅导丛书，涵盖小学一年级到高三所有同学的需求，正品保证，值得信赖！天天都有惊喜，优惠形式多种多样，爆款抢购的，秒杀的，特价超体验的，统统都有，力度大到没朋友。只需点击： http://zt.xueersi.com/taoshujie/  妈妈再也不用担心我的学习了。</p>
                     <span>11小时前</span>
                     <a href="delete.php?id=1" onclick="javascript:return ConfirmDel();" target="main">删除</a>
                 </div>
@@ -60,13 +57,24 @@
             <div class="notice-message">
                 <div class="notice-user">
                     <a><img src="img/notice-user.jpg"/></a>
-                    <span>用户名</span>
+                    <span>网校</span>
+                </div>
+                <div class="notice-text">
+                    <p>景雪京同学： 直播邀请,2015-09-11 10:45:00至2015-09-11 11:45:00，进行直播答疑,直播主题：这次一定要成功</p>
+                    <span>11小时前</span>
+                </div>
+            </div>
+            <div class="notice-message">
+                <div class="notice-user">
+                    <a><img src="img/notice-user.jpg"/></a>
+                    <span>网校</span>
                 </div>
                 <div class="notice-text">
                     <p>泷泽朗同学： 网校放大招啦！9月21日-10月31日，首届淘书节重磅上线，上百种优质辅导丛书，涵盖小学一年级到高三所有同学的需求，正品保证，值得信赖！天天都有惊喜，优惠形式多种多样，爆款抢购的，秒杀的，特价超体验的，统统都有，力度大到没朋友。只需点击： http://zt.xueersi.com/taoshujie/  妈妈再也不用担心我的学习了。</p>
                     <span>11小时前</span>
-                    <a href="delete.php?id=1" onclick="javascript:return ConfirmDel();" target="main">删除</a>
                 </div>
+            </div>
+            <div class="notice-message nm-paging">
             </div>
         </div>   
     </div>    
