--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -19,7 +19,8 @@
             <li><a href="#">待支付 22</a></li>
             <li><a href="#">已取消 11</a></li>
             <li><a href="#">待审核 10</a></li>
-            <li><a href="#">代发货 5</a></li>
+            <li><a href="#">审核未通过 5</a></li>
+            <li><a href="#">待发货 5</a></li>
             <li><a href="#">待收货 6</a></li>
         </ul>
         <div class="some-order">
@@ -82,7 +83,7 @@
                         </div>
                     </li>
                     <li class="ao-second ao-li">￥1389.00</li>
-                    <li class="ao-third ao-li">待支付</li>
+                    <li class="ao-third ao-li">已完成</li>
                     <li class="ao-li">
                         <div class="ao-operation">
                             <button>查看详情</button>
@@ -107,7 +108,7 @@
                         </div>
                     </li>
                     <li class="ao-second ao-li">￥1389.00</li>
-                    <li class="ao-third ao-li">待支付</li>
+                    <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
                             <button class="alert">重新购买</button>
@@ -135,7 +136,7 @@
                         </div>
                     </li>
                     <li class="ao-second ao-li">￥1389.00</li>
-                    <li class="ao-third ao-li">待支付</li>
+                    <li class="ao-third ao-li">待审核</li>
                     <li class="ao-li">
                         <div class="ao-operation">
                             <button>查看详情</button>
@@ -163,10 +164,10 @@
                         </div>
                     </li>
                     <li class="ao-second ao-li">￥1389.00</li>
-                    <li class="ao-third ao-li">待支付</li>
+                    <li class="ao-third ao-li">待收货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="alert">确认订单</button>
+                            <button class="alert">确认收货</button>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -191,7 +192,32 @@
                         </div>
                     </li>
                     <li class="ao-second ao-li">￥1389.00</li>
-                    <li class="ao-third ao-li">待支付</li>
+                    <li class="ao-third ao-li">待发货</li>
+                    <li class="ao-li">
+                        <div class="ao-operation">
+                            <button>查看详情</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="ao-details">
+                <ul class="ao-subtitle">
+                    <li><p>2015-08-02  14:32:12</p></li>
+                    <li><span>订单号：201508021432120909</span></li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="ao-subtitle-left">
+                            <div class="order-teacher">
+                                <img src="img/order-teacher.png" alt="">
+                                <em>语文</em>
+                                <span>[课程升级] 2015学年五升六年级奥数年卡（竞赛班）</span>
+                                <p>顾斐老师</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="ao-second ao-li">￥1389.00</li>
+                    <li class="ao-third ao-li">审核未通过</li>
                     <li class="ao-li">
                         <div class="ao-operation">
                             <button>查看详情</button>
