--- a/source/widget/errorQuestion/chooseGrade.html
+++ b/source/widget/errorQuestion/chooseGrade.html
@@ -9,7 +9,6 @@
     <link href="css/normalize.css" type="text/css" rel="stylesheet" />
     <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="css/error_question.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="error_question.js"></script>
     <!--[if lt IE 9]>
     <link href="css/ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
@@ -70,7 +69,7 @@
                     <span>更多</span>
                     <img src="img/arrow_down.png" alt=""/>
                 </div>
-                <div class="chocie-point-download left">下载复习笔记</div>
+                <!--<div class="chocie-point-download left">下载复习笔记</div>-->
             </div>
         </div>
     </div>
