--- a/source/widget/Public.Topbar/topbar.html
+++ b/source/widget/Public.Topbar/topbar.html
@@ -117,7 +117,7 @@
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
-    <script type="text/javascript" src="topbar.js"></script>
+    <script src="../Module.Dropdown/dropdown.js"></script>
 
 </body>
 
