--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -9,10 +9,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link href="../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet" ><!--ignore-->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" ><!--ignore-->
+    <link href="../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet"><!--ignore-->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css"><!--ignore-->
     <!-- 这是当前模块样式文件 -->
     <!--STYLE_PLACEHOLDER-->
+
 </head>
 
 <body>
@@ -20,7 +21,10 @@
     <link rel="import" href="../widget/Public.Topbar/topbar.tpl?__inline">
     <!--  module.header  -->
     <link rel="import" href="../widget/Public.Header/header.tpl?__inline">
-
+    <!--  moudle.nav  -->
+    <div class="container">
+        <link rel="import" href="../widget/Public.Nav/nav.tpl?__inline">
+    </div>
     <div class="main">
         <h2>XUEJS自动构建工具</h2>
         <p>
@@ -31,6 +35,14 @@
 
     <!--SCRIPT_PLACEHOLDER-->
     <!--RESOURCEMAP_PLACEHOLDER-->
+    <script>
+    $(function(){
+        nav.init({
+            dataUrl : '../data/Public.Nav/nav.json',
+            fixed : true
+        });
+    });
+</script>
 </body>
 
 </html>
