--- a/source/widget/UM.address/index.html
+++ b/source/widget/UM.address/index.html
@@ -18,7 +18,7 @@
 		<div class="setAddress-title">
 			<span class="btn btn-info">新增收货地址</span>
 			<span>
-				你可以创建 <strong>5</strong>
+				你已创建 <strong>5</strong>
 				个收货地址,最多可以创建 <strong>10</strong>
 				个
 			</span>
