--- a/source/widget/errorQuestion/showLinks.html
+++ b/source/widget/errorQuestion/showLinks.html
@@ -9,7 +9,7 @@
     <link href="css/normalize.css" type="text/css" rel="stylesheet" />
     <link href="css/foundation.min.css" type="text/css" rel="stylesheet" />
     <link href="css/error_question.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="error_question.js"></script>
+    <script type="text/javascript" src="js/error_question.js"></script>
     <!--[if lt IE 9]>
     <link href="css/ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
