课程列表更改

--- a/source/widget/courses/courses.html
+++ b/source/widget/courses/courses.html
@@ -201,7 +201,7 @@
                     <strong class="test-price"><span>￥</span>13.44</strong>
                 </p>
             </div>
-            <a href="###" class="cancel-courseList">取消收藏</a>
+            <span class="cancel-courseList"><a href="###" class="">取消收藏</a><!-- <em>(<i>33</i>)</em> --></span>
         </div>
 
 
