--- a/source/widget/UM.card.learn/index.html
+++ b/source/widget/UM.card.learn/index.html
@@ -61,6 +61,7 @@
                     <button class="cl-btn">下一步</button>
                 </div>
                 <div class="payment_bank">
+                    <div class="recharge_sum">充值金额：<strong>100</strong>元</div>
                     <input type="hidden" autocomplete="off" name="default_bank" id="default_bank" value="1" paytype="1">
                     <input type="hidden" autocomplete="off" name="paytype_id" id="paytype_id" value="">
                     <div class="paylists hasCkecked" style="display: block;">
@@ -166,10 +167,11 @@
                             <span>更多银行</span>
                         </p>
                     </div>
-                </div>
-                <div class="formPastPayment">
+                     <div class="formPastPayment">
                     <button class="btn btn_blue" type="button">去充值</button>
                 </div>
+                </div>
+               
                 <div class="prompt-box">
                     <img class="prompt" src="img/prompt.png">
                     <div class="cl-prompt-box">
