新增及修改用户设置合并页面

--- a/source/pages/userManageMoney.html
+++ b/source/pages/userManageMoney.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>基本信息-代金卡激活记录</title>
+    <title>代金卡激活记录-用户设置</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
