--- a/source/pages/userManageCertificate.html
+++ b/source/pages/userManageCertificate.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>基本信息-听课证激活</title>
+    <title>听课证激活-用户设置</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
