--- a/source/pages/userManageThirdBind.html
+++ b/source/pages/userManageThirdBind.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>基本信息-账户充值</title>
+    <title>第三方账户绑定-用户设置</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
@@ -34,7 +34,7 @@
             </div>
             <div class="col-md-10 col-sm-9 user-manage-body">
                 <div class="panel panel-default">
-                   <div class="panel-heading"><h3>账户充值</h3></div>
+                   <div class="panel-heading"><h3>第三方账户绑定</h3></div>
                     <div class="panel-body row">
                             <!-- module.UM.Basic.information -->
                             <link rel="import" href="../widget/UM.third.bind/index.tpl?__inline">
